--- a/todos/style.css
+++ b/todos/style.css
@@ -1,54 +1,68 @@
 *{
-	font-size: 5vh;
+	font-size: 4vh;
 }
-.context input {
+body{
+	background-color: silver;
+}
+
+section{
+	width:80%;
+	margin:0 10% 0% 10%; 
+}
+header{
+	width:80%;
+	margin:0 10% 0 10%;
+	background-color: silver;
+	border-bottom: 2px solid black;
+	padding-bottom: 1%;
+}
+header div{
+	padding-top: 3vh;
+	width:80%;
+	margin: 0 auto;
+	text-align: center;
+}
+footer{
+	width:80%;
+	margin:2% 10% 0 10%;
+	background-color: silver;
+	border-top: 2px solid black;
+}
+footer div{
+	width:17%;
+	float:left;
+	margin: 0 auto;
+	text-align: center;
+	padding-left: 3vh;
+}
+footer div button{
+	font-size: 3vh;
+	
+}
+.error{
+	color: red;
+}
+.sort{
+	width:80%;
+	margin:0 10% 2% 10%;
+	text-align: center;
+	border-bottom: 2px solid black;
+}
+.dateIn{
+	width: 25vh;
+}
+.checked{
+	text-decoration: line-through;
+	background-color: rgba(0,0,0,0.7);
+}
+.check{
 	cursor: pointer;
 	height: 5vh;
   	width: 5vh;
 }
-.conteiner{
-	padding: 5%;
-	border: 4px solid black;
-	position: absolute;
- 	top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-	background-color: silver;
+.del{
+	float: right;
 }
-.header{
-	border-bottom: 2px solid black;
-	padding-bottom: 7vh;
-}
-.header input{
-	width:100%;
-}
-.header button{
-
-	width: 20%;
-	margin-left: 40%;
-}
-.inputDate{
-	margin-bottom: 2%;
-}
-.inputEvent{
-	margin-bottom: 2%;
-}
-.context{
-	padding: 10% 0 10% 0;
-}
-.footer{
-	border-top: 2px solid black;
-	padding-top: 2%;
-}
-.left{
-	float: left;
-	width: 20%;
-	font-size: 3vh;
-}
-button{
-	width: 23%;
-	margin-left: 2%;
-	font-size: 3vh;
-	float: left;
+.date{
 	text-align: center;
 }
